sassi-macros/tests/compile_fail/cacheable_non_monotonic_watermark_field.stderr
error[E0277]: the trait bound `bool: MonotonicWatermark` is not satisfied
 --> tests/compile_fail/cacheable_non_monotonic_watermark_field.rs:9:11
  |
9 |     flag: bool,
  |           ^^^^ the trait `MonotonicWatermark` is not implemented for `bool`
  |
  = help: the following other types implement trait `MonotonicWatermark`:
            (A, B)
            (A, B, C)
            (A, B, C, D)
            SystemTime
            i128
            i16
            i32
            i64
          and $N others
note: required by a bound in `sassi::DeltaSyncCacheable::Watermark`
 --> $WORKSPACE/sassi/src/watermark.rs
  |
  |     type Watermark: MonotonicWatermark;
  |                     ^^^^^^^^^^^^^^^^^^ required by this bound in `DeltaSyncCacheable::Watermark`
